// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`options > should options resolved 1`] = `
{
  "accentColors": {
    "amber": [
      "oklch(99.4% 0.0028 84.62)",
      "oklch(98.62% 0.024 100.3)",
      "oklch(96.9% 0.0686 100.4)",
      "oklch(94.54% 0.1043 98.19)",
      "oklch(91.84% 0.1333 98.4)",
      "oklch(88.12% 0.1237 93.24)",
      "oklch(82.74% 0.122 86.18)",
      "oklch(75.82% 0.1404 76.7)",
      "oklch(85.62% 0.1778 81.37)",
      "oklch(83.15% 0.1679 80.94)",
      "oklch(56.92% 0.1439 67.28)",
      "oklch(35.19% 0.0485 53.74)",
    ],
    "amberDark": [
      "oklch(18.36% 0.0126 77.27)",
      "oklch(21.17% 0.0179 78.68)",
      "oklch(25.75% 0.0437 74.56)",
      "oklch(29.62% 0.0715 76.25)",
      "oklch(33.69% 0.0812 76.41)",
      "oklch(38.71% 0.0784 75.09)",
      "oklch(45.32% 0.0817 74.55)",
      "oklch(53.6% 0.0964 73.57)",
      "oklch(85.62% 0.1778 81.37)",
      "oklch(90.15% 0.2065 96.98)",
      "oklch(87.06% 0.1754 85.07)",
      "oklch(93.49% 0.0715 85.99)",
    ],
    "blue": [
      "oklch(99.32% 0.0033 247.6)",
      "oklch(98.15% 0.0096 243.3)",
      "oklch(96% 0.0199 236.7)",
      "oklch(93.73% 0.0371 239)",
      "oklch(90.6% 0.0535 242.8)",
      "oklch(86.38% 0.0686 243.2)",
      "oklch(80.92% 0.0884 243.3)",
      "oklch(73.48% 0.1211 243)",
      "oklch(64.93% 0.193 251.8)",
      "oklch(62.11% 0.1837 251.9)",
      "oklch(55.77% 0.1889 253)",
      "oklch(32.4% 0.0965 259)",
    ],
    "blueDark": [
      "oklch(19.32% 0.0258 256.8)",
      "oklch(21.3% 0.0295 258.8)",
      "oklch(27.41% 0.0669 254)",
      "oklch(31.7% 0.1002 248.3)",
      "oklch(36.49% 0.1084 249.7)",
      "oklch(41.61% 0.1125 251.7)",
      "oklch(47.48% 0.1211 252.8)",
      "oklch(54.13% 0.1396 253.2)",
      "oklch(64.93% 0.193 251.8)",
      "oklch(68.9% 0.1697 251.5)",
      "oklch(76.79% 0.1347 248.8)",
      "oklch(90.72% 0.0511 238.3)",
    ],
    "bronze": [
      "oklch(99.15% 0.001 15.92)",
      "oklch(98.06% 0.0073 42.99)",
      "oklch(95.28% 0.0102 44.26)",
      "oklch(92.52% 0.0138 43.57)",
      "oklch(89.54% 0.0178 42.64)",
      "oklch(85.99% 0.0225 43.4)",
      "oklch(81.13% 0.0295 41.94)",
      "oklch(74.18% 0.0388 41.18)",
      "oklch(62.75% 0.046 44.29)",
      "oklch(58.8% 0.0452 42.44)",
      "oklch(51.05% 0.0437 38.37)",
      "oklch(32.92% 0.0293 35.24)",
    ],
    "bronzeDark": [
      "oklch(18.06% 0.0053 41.55)",
      "oklch(21.47% 0.005 41.54)",
      "oklch(25.45% 0.0081 42.65)",
      "oklch(29.11% 0.0102 45.5)",
      "oklch(32.94% 0.0128 43.31)",
      "oklch(37.44% 0.016 44.26)",
      "oklch(42.99% 0.02 44.84)",
      "oklch(49.86% 0.0245 45.17)",
      "oklch(62.75% 0.046 44.29)",
      "oklch(66.87% 0.0453 44.29)",
      "oklch(79.18% 0.043 44.5)",
      "oklch(91.51% 0.0174 50.3)",
    ],
    "brown": [
      "oklch(99.43% 0.0015 63.24)",
      "oklch(98.32% 0.0058 65.73)",
      "oklch(95.41% 0.0128 67.82)",
      "oklch(92.61% 0.0203 66.85)",
      "oklch(89.69% 0.0286 65.79)",
      "oklch(86.24% 0.039 65.47)",
      "oklch(81.53% 0.0531 64.22)",
      "oklch(74.67% 0.0717 62.45)",
      "oklch(63.27% 0.0784 60.77)",
      "oklch(59.67% 0.0725 59.28)",
      "oklch(51.21% 0.0583 55.46)",
      "oklch(33.15% 0.018 46.98)",
    ],
    "brownDark": [
      "oklch(17.85% 0.005 81.55)",
      "oklch(21.31% 0.0075 51.62)",
      "oklch(25.36% 0.0128 53.48)",
      "oklch(28.84% 0.0182 55.42)",
      "oklch(32.47% 0.0243 55.88)",
      "oklch(37.02% 0.0317 57.69)",
      "oklch(42.9% 0.0409 59.83)",
      "oklch(50.86% 0.0535 62.17)",
      "oklch(63.27% 0.0784 60.77)",
      "oklch(67.44% 0.0749 61.48)",
      "oklch(79.82% 0.0628 62.51)",
      "oklch(91.76% 0.036 75.67)",
    ],
    "crimson": [
      "oklch(99.38% 0.0033 356.3)",
      "oklch(98.18% 0.008 357.2)",
      "oklch(95.41% 0.0261 356.3)",
      "oklch(92.52% 0.0411 356.3)",
      "oklch(89.28% 0.0537 355.8)",
      "oklch(85.5% 0.0646 355.6)",
      "oklch(80.78% 0.0784 354.8)",
      "oklch(75% 0.0988 354.1)",
      "oklch(63.43% 0.213 1.304)",
      "oklch(60.8% 0.2111 2.355)",
      "oklch(55.21% 0.2074 4.487)",
      "oklch(34.08% 0.1129 356.8)",
    ],
    "crimsonDark": [
      "oklch(18.93% 0.0143 354.2)",
      "oklch(20.68% 0.0221 352.9)",
      "oklch(25.57% 0.0595 353.9)",
      "oklch(29.31% 0.0944 354.1)",
      "oklch(33.26% 0.1044 354.7)",
      "oklch(38.18% 0.1088 355.5)",
      "oklch(45.01% 0.12 356.7)",
      "oklch(54.19% 0.1482 358.3)",
      "oklch(63.43% 0.213 1.304)",
      "oklch(66.37% 0.1967 1.951)",
      "oklch(78.74% 0.167 6.719)",
      "oklch(90.88% 0.0541 346.7)",
    ],
    "cyan": [
      "oklch(99.21% 0.0037 219.2)",
      "oklch(98.03% 0.009 202.9)",
      "oklch(95.81% 0.0265 203.6)",
      "oklch(93.19% 0.0412 204.7)",
      "oklch(89.98% 0.0538 206.5)",
      "oklch(85.93% 0.066 207.7)",
      "oklch(80.45% 0.0817 209.6)",
      "oklch(72.7% 0.1099 211.7)",
      "oklch(66.09% 0.1215 221.5)",
      "oklch(62.67% 0.1141 221.3)",
      "oklch(54.03% 0.127 223.7)",
      "oklch(33.17% 0.0528 218.6)",
    ],
    "cyanDark": [
      "oklch(19.13% 0.0172 219.9)",
      "oklch(21.41% 0.0182 225.4)",
      "oklch(27.22% 0.044 222.5)",
      "oklch(31.5% 0.0629 222.1)",
      "oklch(36.17% 0.0703 221.5)",
      "oklch(41.35% 0.0748 221.7)",
      "oklch(47.77% 0.0827 221.4)",
      "oklch(55.77% 0.0984 220.7)",
      "oklch(66.09% 0.1215 221.5)",
      "oklch(69.8% 0.1195 219.1)",
      "oklch(78.56% 0.1154 213.4)",
      "oklch(90.93% 0.0568 211.7)",
    ],
    "gold": [
      "oklch(99.37% 0.0011 106.4)",
      "oklch(98.09% 0.0086 97.34)",
      "oklch(95.34% 0.0118 94.69)",
      "oklch(92.57% 0.015 93.18)",
      "oklch(89.58% 0.0192 90.73)",
      "oklch(85.96% 0.0247 88.38)",
      "oklch(81.01% 0.0317 83.41)",
      "oklch(73.86% 0.0422 78.17)",
      "oklch(62.06% 0.0493 78.13)",
      "oklch(58.77% 0.0465 77.42)",
      "oklch(50.39% 0.0393 78.1)",
      "oklch(33.21% 0.0189 81.67)",
    ],
    "goldDark": [
      "oklch(18.22% 0.0023 106.6)",
      "oklch(21.65% 0.0061 92.49)",
      "oklch(25.49% 0.0076 88.28)",
      "oklch(29.08% 0.0095 86.76)",
      "oklch(32.89% 0.0115 83.66)",
      "oklch(37.36% 0.0138 82.43)",
      "oklch(42.94% 0.0165 80.92)",
      "oklch(49.83% 0.0204 79.5)",
      "oklch(62.06% 0.0493 78.13)",
      "oklch(66.22% 0.0473 77.18)",
      "oklch(79.4% 0.041 77.18)",
      "oklch(91.51% 0.0137 77.44)",
    ],
    "grass": [
      "oklch(99.4% 0.0053 146.4)",
      "oklch(98.2% 0.0092 145.9)",
      "oklch(96.08% 0.0231 145.3)",
      "oklch(93.42% 0.037 146.2)",
      "oklch(90.13% 0.0529 146.4)",
      "oklch(85.78% 0.0714 146.8)",
      "oklch(79.85% 0.095 147.5)",
      "oklch(71.65% 0.13 148.3)",
      "oklch(65.16% 0.1469 147.4)",
      "oklch(61.38% 0.1416 147.3)",
      "oklch(52.68% 0.1296 147.2)",
      "oklch(32.68% 0.0535 148.6)",
    ],
    "grassDark": [
      "oklch(18.83% 0.0141 155.8)",
      "oklch(21.1% 0.0141 151.5)",
      "oklch(26.71% 0.03 150.7)",
      "oklch(31.91% 0.0522 150.4)",
      "oklch(36.68% 0.0619 149.9)",
      "oklch(41.64% 0.0721 149.3)",
      "oklch(46.83% 0.0835 148.9)",
      "oklch(52.38% 0.0973 148.2)",
      "oklch(65.16% 0.1469 147.4)",
      "oklch(68.98% 0.1454 147.6)",
      "oklch(77.98% 0.142 148.5)",
      "oklch(91.1% 0.078 144.9)",
    ],
    "green": [
      "oklch(99.43% 0.0043 159.1)",
      "oklch(98.16% 0.0091 155.3)",
      "oklch(95.88% 0.0229 156.4)",
      "oklch(93.25% 0.0364 156.6)",
      "oklch(89.95% 0.0496 157.2)",
      "oklch(85.7% 0.0645 157.9)",
      "oklch(79.77% 0.0839 159)",
      "oklch(71.44% 0.1124 160.6)",
      "oklch(64.05% 0.1327 157.8)",
      "oklch(61.12% 0.1263 158.3)",
      "oklch(52.9% 0.133 158.3)",
      "oklch(32.18% 0.0474 164.6)",
    ],
    "greenDark": [
      "oklch(18.88% 0.0127 163.3)",
      "oklch(21.27% 0.016 162.2)",
      "oklch(27.14% 0.0388 162.7)",
      "oklch(31.82% 0.0573 161.5)",
      "oklch(36.48% 0.066 161.1)",
      "oklch(41.34% 0.0732 160.7)",
      "oklch(46.74% 0.0828 159.9)",
      "oklch(52.75% 0.0962 159.2)",
      "oklch(64.05% 0.1327 157.8)",
      "oklch(67.55% 0.1412 157.6)",
      "oklch(77.97% 0.1657 157.2)",
      "oklch(90.48% 0.0828 158.3)",
    ],
    "indigo": [
      "oklch(99.42% 0.0015 286.4)",
      "oklch(98.29% 0.008 271.4)",
      "oklch(96.07% 0.0172 268.5)",
      "oklch(93.53% 0.0338 268.5)",
      "oklch(90.32% 0.0511 270)",
      "oklch(86.3% 0.0714 271.5)",
      "oklch(80.68% 0.0869 271.4)",
      "oklch(73.01% 0.1133 270.5)",
      "oklch(54.36% 0.1912 267.1)",
      "oklch(51.12% 0.1946 266.5)",
      "oklch(50.97% 0.1728 267.1)",
      "oklch(31.26% 0.0856 268.6)",
    ],
    "indigoDark": [
      "oklch(19.07% 0.0247 276.7)",
      "oklch(20.88% 0.0302 276)",
      "oklch(27.22% 0.0693 267.8)",
      "oklch(31.9% 0.0932 267)",
      "oklch(36.18% 0.1045 267.5)",
      "oklch(40.37% 0.1106 268.3)",
      "oklch(45.03% 0.1202 268.8)",
      "oklch(50.27% 0.1372 268.4)",
      "oklch(54.36% 0.1912 267.1)",
      "oklch(58.99% 0.1757 269.2)",
      "oklch(77.72% 0.1233 273.3)",
      "oklch(91.1% 0.0428 270)",
    ],
    "iris": [
      "oklch(99.45% 0.0026 286.4)",
      "oklch(98.12% 0.0093 284.1)",
      "oklch(96.14% 0.0175 283.8)",
      "oklch(93.51% 0.0353 283.4)",
      "oklch(90.45% 0.0526 283.8)",
      "oklch(86.46% 0.0696 283.1)",
      "oklch(80.79% 0.0885 282.9)",
      "oklch(72.92% 0.1183 281.5)",
      "oklch(54.03% 0.1839 278.3)",
      "oklch(50.86% 0.1862 277.5)",
      "oklch(51.04% 0.1733 279.7)",
      "oklch(31.45% 0.0989 277.4)",
    ],
    "irisDark": [
      "oklch(19.28% 0.0216 284.2)",
      "oklch(20.85% 0.0292 286.5)",
      "oklch(27.28% 0.0686 278.6)",
      "oklch(31.88% 0.102 276.1)",
      "oklch(35.81% 0.1093 277.4)",
      "oklch(39.88% 0.1117 279.6)",
      "oklch(44.8% 0.1201 280.8)",
      "oklch(50.73% 0.1381 281.1)",
      "oklch(54.03% 0.1839 278.3)",
      "oklch(58.67% 0.1721 281.2)",
      "oklch(77.57% 0.1311 286.6)",
      "oklch(91.42% 0.0419 287)",
    ],
    "jade": [
      "oklch(99.45% 0.0037 172.6)",
      "oklch(98.15% 0.0089 160.3)",
      "oklch(95.96% 0.0221 161.9)",
      "oklch(93.39% 0.034 163.5)",
      "oklch(90.19% 0.0462 164.8)",
      "oklch(85.92% 0.0592 166.9)",
      "oklch(80.03% 0.0769 169.5)",
      "oklch(72.09% 0.1026 173.4)",
      "oklch(64.21% 0.115 170.8)",
      "oklch(61.34% 0.1099 170.6)",
      "oklch(52.89% 0.127 167.2)",
      "oklch(32.57% 0.041 169.8)",
    ],
    "jadeDark": [
      "oklch(18.8% 0.014 166.3)",
      "oklch(21.58% 0.018 166.1)",
      "oklch(27.24% 0.0422 166.8)",
      "oklch(31.64% 0.0575 168)",
      "oklch(36.18% 0.0643 168.5)",
      "oklch(41.08% 0.0683 169.7)",
      "oklch(46.85% 0.0753 170.6)",
      "oklch(53.69% 0.0879 171.8)",
      "oklch(64.21% 0.115 170.8)",
      "oklch(67.76% 0.1252 169.9)",
      "oklch(78.54% 0.1561 167.1)",
      "oklch(90.27% 0.0776 167)",
    ],
    "lime": [
      "oklch(99.24% 0.0042 120.7)",
      "oklch(98.17% 0.0098 116.7)",
      "oklch(95.94% 0.0433 119.1)",
      "oklch(93.21% 0.0689 120.4)",
      "oklch(89.74% 0.087 121.8)",
      "oklch(85.3% 0.0993 123.4)",
      "oklch(79.46% 0.1107 125.3)",
      "oklch(72.36% 0.1348 128.1)",
      "oklch(88.75% 0.1749 126.1)",
      "oklch(85.89% 0.1877 126.7)",
      "oklch(54.38% 0.1113 128.6)",
      "oklch(35.37% 0.0574 121.2)",
    ],
    "limeDark": [
      "oklch(18.04% 0.0144 120.3)",
      "oklch(20.8% 0.0194 129)",
      "oklch(26.62% 0.0343 132.2)",
      "oklch(31.65% 0.0469 131.8)",
      "oklch(36.34% 0.0579 131.6)",
      "oklch(41.16% 0.0686 131.4)",
      "oklch(46.44% 0.08 131.2)",
      "oklch(52.43% 0.0945 130.9)",
      "oklch(88.75% 0.1749 126.1)",
      "oklch(94.18% 0.1754 123.7)",
      "oklch(86.78% 0.1557 124.8)",
      "oklch(94.64% 0.0819 122.6)",
    ],
    "mint": [
      "oklch(99.28% 0.0053 183.7)",
      "oklch(98.2% 0.0101 178.7)",
      "oklch(95.95% 0.0299 179.6)",
      "oklch(93.3% 0.047 179)",
      "oklch(89.94% 0.0608 178.7)",
      "oklch(85.59% 0.0719 178.7)",
      "oklch(79.79% 0.0848 178.2)",
      "oklch(72.2% 0.1066 177.7)",
      "oklch(86.96% 0.0998 178)",
      "oklch(84.12% 0.0997 177.8)",
      "oklch(51.18% 0.095 176)",
      "oklch(34.97% 0.0505 181.4)",
    ],
    "mintDark": [
      "oklch(18.84% 0.0116 192.3)",
      "oklch(21.01% 0.0172 196.6)",
      "oklch(26.87% 0.039 192.5)",
      "oklch(31.35% 0.058 191.6)",
      "oklch(35.94% 0.0634 188.9)",
      "oklch(41.04% 0.0665 186.3)",
      "oklch(47.09% 0.0728 183.4)",
      "oklch(54.01% 0.085 179.6)",
      "oklch(86.96% 0.0998 178)",
      "oklch(91.62% 0.0796 179.4)",
      "oklch(79.55% 0.1184 176.4)",
      "oklch(93.05% 0.0569 168.5)",
    ],
    "orange": [
      "oklch(99.22% 0.0026 40.73)",
      "oklch(97.87% 0.0154 70.83)",
      "oklch(95.76% 0.0368 78.11)",
      "oklch(92.03% 0.0811 74.16)",
      "oklch(89.04% 0.1066 70.84)",
      "oklch(85.73% 0.11 64.43)",
      "oklch(80.53% 0.1126 59.88)",
      "oklch(74.54% 0.1321 54.82)",
      "oklch(68.9% 0.1911 44.8)",
      "oklch(66.22% 0.1944 43.49)",
      "oklch(59.19% 0.186 46.95)",
      "oklch(35.01% 0.0687 40.82)",
    ],
    "orangeDark": [
      "oklch(18.64% 0.0119 53.75)",
      "oklch(20.88% 0.0192 67.38)",
      "oklch(25.75% 0.0452 59.54)",
      "oklch(29.33% 0.0796 58.65)",
      "oklch(33.46% 0.0868 58.09)",
      "oklch(38.63% 0.0869 55.15)",
      "oklch(45.34% 0.0947 53.06)",
      "oklch(54.05% 0.1162 49.75)",
      "oklch(68.9% 0.1911 44.8)",
      "oklch(74.14% 0.1991 46.32)",
      "oklch(79.9% 0.1631 50.77)",
      "oklch(92.48% 0.0524 66.22)",
    ],
    "pink": [
      "oklch(99.41% 0.004 336.3)",
      "oklch(98.31% 0.0094 340)",
      "oklch(95.43% 0.0275 340.6)",
      "oklch(92.51% 0.0416 340.7)",
      "oklch(89.31% 0.0543 340.9)",
      "oklch(85.54% 0.0669 340.9)",
      "oklch(80.91% 0.0833 341.2)",
      "oklch(75.17% 0.1067 341.6)",
      "oklch(61.67% 0.2077 346.1)",
      "oklch(59.57% 0.2072 346.5)",
      "oklch(55.66% 0.2063 347.3)",
      "oklch(35% 0.129 345.5)",
    ],
    "pinkDark": [
      "oklch(19.07% 0.0174 334.9)",
      "oklch(20.74% 0.0313 338.2)",
      "oklch(26.14% 0.0612 337.5)",
      "oklch(29.94% 0.0975 340.1)",
      "oklch(33.8% 0.1041 340.6)",
      "oklch(38.9% 0.1072 341.6)",
      "oklch(45.87% 0.1193 342.6)",
      "oklch(54.54% 0.1449 344.1)",
      "oklch(61.67% 0.2077 346.1)",
      "oklch(65% 0.197 346.2)",
      "oklch(78.87% 0.19 350.7)",
      "oklch(90.53% 0.0586 343.2)",
    ],
    "plum": [
      "oklch(99.33% 0.0047 316.9)",
      "oklch(98.31% 0.0092 326)",
      "oklch(95.69% 0.0274 325.5)",
      "oklch(92.92% 0.0436 324.9)",
      "oklch(89.85% 0.0574 324.4)",
      "oklch(86.03% 0.0723 323.9)",
      "oklch(80.92% 0.0915 323.1)",
      "oklch(74.18% 0.12 321.9)",
      "oklch(57.89% 0.1877 322.1)",
      "oklch(55.27% 0.181 322.1)",
      "oklch(52.13% 0.1728 322)",
      "oklch(33.76% 0.1248 321.4)",
    ],
    "plumDark": [
      "oklch(19% 0.0175 327)",
      "oklch(21% 0.0311 327.7)",
      "oklch(26.57% 0.0618 326.7)",
      "oklch(30.65% 0.0883 325.3)",
      "oklch(34.34% 0.0953 324.6)",
      "oklch(38.89% 0.097 324.2)",
      "oklch(45.65% 0.1064 323.4)",
      "oklch(54.51% 0.1279 322.2)",
      "oklch(57.89% 0.1877 322.1)",
      "oklch(61.6% 0.1821 322.1)",
      "oklch(78.59% 0.1541 322.1)",
      "oklch(90.62% 0.0551 325.8)",
    ],
    "purple": [
      "oklch(99.3% 0.0038 325.4)",
      "oklch(98.23% 0.0091 313.1)",
      "oklch(95.91% 0.0243 313.3)",
      "oklch(93.28% 0.0387 312.1)",
      "oklch(90.07% 0.0539 311.6)",
      "oklch(85.96% 0.0706 311)",
      "oklch(80.4% 0.0928 309.9)",
      "oklch(73.31% 0.1227 308)",
      "oklch(55.55% 0.183 305.9)",
      "oklch(52.42% 0.1756 305.7)",
      "oklch(51.6% 0.174 305.7)",
      "oklch(32.23% 0.11 303.8)",
    ],
    "purpleDark": [
      "oklch(19.15% 0.0222 316)",
      "oklch(21.31% 0.0315 314.3)",
      "oklch(26.63% 0.0615 312)",
      "oklch(30.82% 0.0828 310.7)",
      "oklch(34.45% 0.0914 310.1)",
      "oklch(38.77% 0.0967 309.7)",
      "oklch(44.96% 0.108 308.7)",
      "oklch(54.09% 0.1328 307.1)",
      "oklch(55.55% 0.183 305.9)",
      "oklch(59.59% 0.1766 306.3)",
      "oklch(78.51% 0.1562 307.9)",
      "oklch(91.09% 0.0486 310.9)",
    ],
    "red": [
      "oklch(99.35% 0.0031 22.75)",
      "oklch(98.32% 0.0083 16.02)",
      "oklch(95.61% 0.021 16.23)",
      "oklch(92.81% 0.0473 16.68)",
      "oklch(89.61% 0.062 17.33)",
      "oklch(85.7% 0.0746 17.87)",
      "oklch(80.72% 0.0895 18.44)",
      "oklch(74.5% 0.1133 19.09)",
      "oklch(62.54% 0.1935 22.98)",
      "oklch(59.99% 0.1952 23.89)",
      "oklch(55.72% 0.1978 25.13)",
      "oklch(33.91% 0.109 16.68)",
    ],
    "redDark": [
      "oklch(18.8% 0.0133 19.39)",
      "oklch(20.48% 0.0215 14.74)",
      "oklch(25.04% 0.0643 13.11)",
      "oklch(28.88% 0.0959 14.29)",
      "oklch(33.16% 0.1066 15.53)",
      "oklch(38.26% 0.1114 16.93)",
      "oklch(45.06% 0.1206 18.91)",
      "oklch(54.36% 0.1465 21.44)",
      "oklch(62.54% 0.1935 22.98)",
      "oklch(66.46% 0.1773 23.09)",
      "oklch(78.37% 0.1619 22.29)",
      "oklch(90.22% 0.0528 6.139)",
    ],
    "ruby": [
      "oklch(99.38% 0.0033 356.3)",
      "oklch(98.34% 0.0084 8.411)",
      "oklch(95.36% 0.0222 8.563)",
      "oklch(92.8% 0.0423 8.465)",
      "oklch(89.64% 0.0548 8.165)",
      "oklch(85.81% 0.066 7.841)",
      "oklch(81.01% 0.0797 7.487)",
      "oklch(74.88% 0.1014 6.861)",
      "oklch(62.84% 0.195 13.19)",
      "oklch(60.13% 0.1962 13.39)",
      "oklch(54.89% 0.1985 13.92)",
      "oklch(34.12% 0.1097 10.04)",
    ],
    "rubyDark": [
      "oklch(18.88% 0.0137 2.904)",
      "oklch(20.77% 0.0159 5.29)",
      "oklch(25.38% 0.0602 6.544)",
      "oklch(29.21% 0.0888 5.505)",
      "oklch(33.27% 0.0997 6.398)",
      "oklch(38.2% 0.105 7.589)",
      "oklch(44.83% 0.1165 9.017)",
      "oklch(54.38% 0.1454 11.06)",
      "oklch(62.84% 0.195 13.19)",
      "oklch(66.35% 0.1794 13.69)",
      "oklch(78.61% 0.1611 17.01)",
      "oklch(90.54% 0.0527 355.8)",
    ],
    "sky": [
      "oklch(99.33% 0.0053 211.9)",
      "oklch(97.99% 0.0099 217.7)",
      "oklch(96.06% 0.0238 219.6)",
      "oklch(93.56% 0.0356 220.4)",
      "oklch(90.28% 0.0465 221.4)",
      "oklch(86.1% 0.0577 222.9)",
      "oklch(80.58% 0.0717 225.7)",
      "oklch(72.94% 0.0962 228)",
      "oklch(86.14% 0.1027 217.8)",
      "oklch(83.77% 0.1037 219.6)",
      "oklch(52.56% 0.108 232.5)",
      "oklch(35.11% 0.0572 241.6)",
    ],
    "skyDark": [
      "oklch(18.98% 0.024 257.1)",
      "oklch(21.61% 0.0289 258.5)",
      "oklch(27.11% 0.0539 251.9)",
      "oklch(32.22% 0.0696 247.8)",
      "oklch(37.25% 0.0791 245.8)",
      "oklch(42.69% 0.0874 243.6)",
      "oklch(48.8% 0.0981 240.7)",
      "oklch(55.74% 0.1143 237.2)",
      "oklch(86.14% 0.1027 217.8)",
      "oklch(90.81% 0.073 214.9)",
      "oklch(79.26% 0.0986 231.7)",
      "oklch(93.37% 0.0526 214.4)",
    ],
    "teal": [
      "oklch(99.39% 0.0047 177.5)",
      "oklch(98.12% 0.009 179)",
      "oklch(96.06% 0.027 180.3)",
      "oklch(93.46% 0.0418 180.2)",
      "oklch(90.04% 0.0541 180.5)",
      "oklch(85.58% 0.0642 181.4)",
      "oklch(79.74% 0.0763 182.2)",
      "oklch(72.11% 0.0972 183.5)",
      "oklch(64.88% 0.1134 182)",
      "oklch(61.95% 0.1096 181.2)",
      "oklch(52.96% 0.1243 179)",
      "oklch(32.69% 0.0504 185)",
    ],
    "tealDark": [
      "oklch(18.89% 0.0123 184.5)",
      "oklch(21.65% 0.0169 189.3)",
      "oklch(27.37% 0.0378 186.3)",
      "oklch(31.73% 0.0545 187)",
      "oklch(36.25% 0.06 186.5)",
      "oklch(41.37% 0.0653 185.4)",
      "oklch(47.32% 0.0739 184.5)",
      "oklch(53.89% 0.0866 183.5)",
      "oklch(64.88% 0.1134 182)",
      "oklch(68.69% 0.1227 180.3)",
      "oklch(78.88% 0.1469 175.7)",
      "oklch(90.51% 0.0721 175.3)",
    ],
    "tomato": [
      "oklch(99.35% 0.0031 22.75)",
      "oklch(98.42% 0.0071 31.02)",
      "oklch(95.44% 0.022 30.88)",
      "oklch(92.6% 0.0471 31.76)",
      "oklch(89.21% 0.0626 31.49)",
      "oklch(85.24% 0.077 32.01)",
      "oklch(80.28% 0.0943 32.17)",
      "oklch(74.15% 0.1182 32.07)",
      "oklch(62.7% 0.1937 33.31)",
      "oklch(60.4% 0.1953 33.26)",
      "oklch(56.65% 0.1977 32.81)",
      "oklch(34.61% 0.0798 30.53)",
    ],
    "tomatoDark": [
      "oklch(18.69% 0.0117 19.59)",
      "oklch(20.77% 0.0167 32.02)",
      "oklch(25.37% 0.0544 26.94)",
      "oklch(29.11% 0.087 28.17)",
      "oklch(33.14% 0.0971 28.66)",
      "oklch(38.01% 0.0994 30.01)",
      "oklch(44.74% 0.1068 31.46)",
      "oklch(53.78% 0.1301 32.94)",
      "oklch(62.7% 0.1937 33.31)",
      "oklch(66.5% 0.1791 34.15)",
      "oklch(78.43% 0.1636 36.02)",
      "oklch(89.86% 0.0466 31.11)",
    ],
    "violet": [
      "oklch(99.21% 0.0028 308)",
      "oklch(98.3% 0.009 295)",
      "oklch(96.28% 0.0189 296.6)",
      "oklch(93.4% 0.0392 295.4)",
      "oklch(90.39% 0.0569 294.1)",
      "oklch(86.41% 0.0725 293.9)",
      "oklch(80.65% 0.0902 293.5)",
      "oklch(72.91% 0.119 292.4)",
      "oklch(54.18% 0.1789 288.1)",
      "oklch(51.07% 0.177 287.6)",
      "oklch(50.8% 0.1591 288.6)",
      "oklch(31.27% 0.0975 286.8)",
    ],
    "violetDark": [
      "oklch(19.14% 0.0261 290.5)",
      "oklch(21.13% 0.0315 299.5)",
      "oklch(27.09% 0.0664 293.9)",
      "oklch(31.21% 0.0929 291.7)",
      "oklch(34.84% 0.0986 291.4)",
      "oklch(38.97% 0.1021 291.8)",
      "oklch(44.46% 0.1109 291.6)",
      "oklch(51.63% 0.1306 290.2)",
      "oklch(54.18% 0.1789 288.1)",
      "oklch(58.82% 0.1695 289.7)",
      "oklch(77.82% 0.1365 293.6)",
      "oklch(91.16% 0.0452 292.6)",
    ],
    "yellow": [
      "oklch(99.28% 0.0052 106.5)",
      "oklch(98.84% 0.025 102.9)",
      "oklch(97.4% 0.0845 104.4)",
      "oklch(95.27% 0.1166 101.7)",
      "oklch(92.51% 0.1409 98.2)",
      "oklch(88.09% 0.1339 95.42)",
      "oklch(83.55% 0.1203 92.79)",
      "oklch(76.61% 0.137 89.85)",
      "oklch(92.66% 0.2086 102.1)",
      "oklch(89.67% 0.1851 97.53)",
      "oklch(57.44% 0.1364 81.69)",
      "oklch(35.78% 0.046 86.63)",
    ],
    "yellowDark": [
      "oklch(18.11% 0.013 86.01)",
      "oklch(20.88% 0.017 92.09)",
      "oklch(25.9% 0.0466 90.29)",
      "oklch(29.26% 0.0694 94.2)",
      "oklch(33.34% 0.0791 94.59)",
      "oklch(38.43% 0.0774 93.3)",
      "oklch(45.16% 0.0809 91.5)",
      "oklch(53.49% 0.0951 89.93)",
      "oklch(92.66% 0.2086 102.1)",
      "oklch(97.11% 0.1822 109.4)",
      "oklch(90.02% 0.1664 101.6)",
      "oklch(94.13% 0.0747 101)",
    ],
  },
  "background": {
    "dark": "#111",
    "light": "#fff",
  },
  "neutralColors": {
    "gray": [
      "oklch(99.09% 0 none)",
      "oklch(98.1% 0 none)",
      "oklch(95.35% 0 none)",
      "oklch(92.96% 0 none)",
      "oklch(90.79% 0 none)",
      "oklch(88.38% 0 none)",
      "oklch(85.08% 0 none)",
      "oklch(79.1% 0 none)",
      "oklch(64.35% 0 none)",
      "oklch(60.85% 0 none)",
      "oklch(50.31% 0 none)",
      "oklch(24.3% 0 none)",
    ],
    "grayDark": [
      "oklch(17.8% 0 none)",
      "oklch(21.34% 0 none)",
      "oklch(25.37% 0 none)",
      "oklch(28.32% 0 none)",
      "oklch(31.3% 0 none)",
      "oklch(34.9% 0 none)",
      "oklch(40.23% 0 none)",
      "oklch(48.77% 0 none)",
      "oklch(53.79% 0 none)",
      "oklch(58.43% 0 none)",
      "oklch(77% 0 none)",
      "oklch(94.89% 0 none)",
    ],
    "mauve": [
      "oklch(99.18% 0.0018 321.1)",
      "oklch(98.32% 0.0033 311.2)",
      "oklch(95.56% 0.0059 314.2)",
      "oklch(93.16% 0.0078 310)",
      "oklch(90.9% 0.0101 306.6)",
      "oklch(88.6% 0.0116 304)",
      "oklch(85.36% 0.0143 300.6)",
      "oklch(79.36% 0.0193 293.5)",
      "oklch(64.58% 0.0195 292.6)",
      "oklch(61.06% 0.0185 293.1)",
      "oklch(50.48% 0.016 296.1)",
      "oklch(24.46% 0.0134 298)",
    ],
    "mauveDark": [
      "oklch(17.99% 0.0043 307.8)",
      "oklch(21.52% 0.0041 307.8)",
      "oklch(25.5% 0.0055 306.5)",
      "oklch(28.45% 0.0076 307.8)",
      "oklch(31.38% 0.009 306.9)",
      "oklch(35.01% 0.0101 304)",
      "oklch(40.16% 0.0122 304.4)",
      "oklch(49.19% 0.0159 300.7)",
      "oklch(54.05% 0.0169 294)",
      "oklch(58.62% 0.0167 295.4)",
      "oklch(76.98% 0.014 296.6)",
      "oklch(94.94% 0.0026 286.3)",
    ],
    "olive": [
      "oklch(99.31% 0.0015 149.1)",
      "oklch(98.3% 0.0033 144.8)",
      "oklch(95.61% 0.0036 141.1)",
      "oklch(93.2% 0.0042 142.1)",
      "oklch(90.95% 0.0045 139.3)",
      "oklch(88.55% 0.0056 141.1)",
      "oklch(85.17% 0.0056 141.1)",
      "oklch(79.21% 0.0071 140.6)",
      "oklch(64.04% 0.0115 136.5)",
      "oklch(60.54% 0.0116 136.5)",
      "oklch(50.01% 0.0111 139.9)",
      "oklch(24.19% 0.0112 138.2)",
    ],
    "oliveDark": [
      "oklch(17.97% 0.0043 128.3)",
      "oklch(21.17% 0.0041 128.3)",
      "oklch(25.16% 0.0051 129)",
      "oklch(28.07% 0.0056 131.4)",
      "oklch(31.01% 0.0066 131.4)",
      "oklch(34.64% 0.0076 134.4)",
      "oklch(39.86% 0.0096 136)",
      "oklch(48.77% 0.0124 140.8)",
      "oklch(53.52% 0.0176 139.6)",
      "oklch(58.12% 0.0163 140.1)",
      "oklch(76.59% 0.0128 139.5)",
      "oklch(94.7% 0.0034 144.8)",
    ],
    "sage": [
      "oklch(99.23% 0.0025 160.4)",
      "oklch(98.08% 0.0027 171.2)",
      "oklch(95.5% 0.0035 170.4)",
      "oklch(93.12% 0.0035 170.4)",
      "oklch(90.92% 0.004 167.7)",
      "oklch(88.51% 0.004 167.7)",
      "oklch(85.11% 0.0044 169.9)",
      "oklch(79.24% 0.0053 169.5)",
      "oklch(63.93% 0.0104 172.4)",
      "oklch(60.48% 0.0097 172.8)",
      "oklch(50.07% 0.0078 175.9)",
      "oklch(23.98% 0.0121 166.8)",
    ],
    "sageDark": [
      "oklch(17.92% 0.0036 167.4)",
      "oklch(21.11% 0.0037 160.2)",
      "oklch(25.12% 0.004 164.2)",
      "oklch(28.12% 0.0049 164.9)",
      "oklch(31.07% 0.0052 167.4)",
      "oklch(34.71% 0.0061 167.4)",
      "oklch(39.92% 0.0078 167.4)",
      "oklch(48.82% 0.0091 169.8)",
      "oklch(53.29% 0.0175 170.8)",
      "oklch(57.93% 0.016 170.5)",
      "oklch(76.6% 0.01 167.5)",
      "oklch(94.73% 0.0024 167.7)",
    ],
    "sand": [
      "oklch(99.37% 0.0011 106.4)",
      "oklch(98.22% 0.0015 106.4)",
      "oklch(95.55% 0.0023 97.61)",
      "oklch(93.22% 0.0034 100.6)",
      "oklch(90.99% 0.0038 95.91)",
      "oklch(88.55% 0.005 98.34)",
      "oklch(85.25% 0.0062 96.6)",
      "oklch(79.18% 0.0083 96.5)",
      "oklch(64.13% 0.0103 106.7)",
      "oklch(60.57% 0.0096 106.7)",
      "oklch(49.79% 0.0079 106.7)",
      "oklch(24.34% 0.0079 96.31)",
    ],
    "sandDark": [
      "oklch(17.76% 0.0023 106.6)",
      "oklch(21.29% 0.0022 106.6)",
      "oklch(25.31% 0.0031 106.6)",
      "oklch(28.28% 0.0036 99.02)",
      "oklch(31.24% 0.0044 100.7)",
      "oklch(34.91% 0.0057 102.2)",
      "oklch(40.07% 0.007 96.1)",
      "oklch(49.01% 0.0095 91.73)",
      "oklch(53.46% 0.011 94.07)",
      "oklch(58.11% 0.0107 94.05)",
      "oklch(76.66% 0.0091 97.38)",
      "oklch(94.83% 0.0026 106.4)",
    ],
    "slate": [
      "oklch(99.12% 0.0015 286.4)",
      "oklch(98.24% 0.003 286.3)",
      "oklch(95.57% 0.0045 281.9)",
      "oklch(93.14% 0.006 283)",
      "oklch(91.01% 0.0075 283.6)",
      "oklch(88.76% 0.0091 281.8)",
      "oklch(85.34% 0.0115 280.8)",
      "oklch(79.39% 0.0158 278.1)",
      "oklch(64.56% 0.0162 277.8)",
      "oklch(60.98% 0.0158 273.2)",
      "oklch(50.26% 0.0137 263.4)",
      "oklch(24.13% 0.0098 249.5)",
    ],
    "slateDark": [
      "oklch(17.89% 0.004 286)",
      "oklch(21.33% 0.0041 264.4)",
      "oklch(25.34% 0.0057 261.2)",
      "oklch(28.27% 0.0073 259.5)",
      "oklch(31.14% 0.0082 259.7)",
      "oklch(34.59% 0.0099 256.5)",
      "oklch(39.77% 0.012 253.8)",
      "oklch(48.99% 0.0157 247.6)",
      "oklch(53.7% 0.0152 261.1)",
      "oklch(58.3% 0.0142 263.3)",
      "oklch(76.77% 0.0104 261.3)",
      "oklch(94.88% 0.0028 264.6)",
    ],
  },
  "prefix": "ui-",
  "reset": true,
  "themes": [],
}
`;

exports[`options > should options resolved 2`] = `
{
  "accentColors": {
    "amber": [
      "oklch(99.4% 0.0028 84.62)",
      "oklch(98.62% 0.024 100.3)",
      "oklch(96.9% 0.0686 100.4)",
      "oklch(94.54% 0.1043 98.19)",
      "oklch(91.84% 0.1333 98.4)",
      "oklch(88.12% 0.1237 93.24)",
      "oklch(82.74% 0.122 86.18)",
      "oklch(75.82% 0.1404 76.7)",
      "oklch(85.62% 0.1778 81.37)",
      "oklch(83.15% 0.1679 80.94)",
      "oklch(56.92% 0.1439 67.28)",
      "oklch(35.19% 0.0485 53.74)",
    ],
    "amberDark": [
      "oklch(18.36% 0.0126 77.27)",
      "oklch(21.17% 0.0179 78.68)",
      "oklch(25.75% 0.0437 74.56)",
      "oklch(29.62% 0.0715 76.25)",
      "oklch(33.69% 0.0812 76.41)",
      "oklch(38.71% 0.0784 75.09)",
      "oklch(45.32% 0.0817 74.55)",
      "oklch(53.6% 0.0964 73.57)",
      "oklch(85.62% 0.1778 81.37)",
      "oklch(90.15% 0.2065 96.98)",
      "oklch(87.06% 0.1754 85.07)",
      "oklch(93.49% 0.0715 85.99)",
    ],
    "blue": [
      "oklch(99.32% 0.0033 247.6)",
      "oklch(98.15% 0.0096 243.3)",
      "oklch(96% 0.0199 236.7)",
      "oklch(93.73% 0.0371 239)",
      "oklch(90.6% 0.0535 242.8)",
      "oklch(86.38% 0.0686 243.2)",
      "oklch(80.92% 0.0884 243.3)",
      "oklch(73.48% 0.1211 243)",
      "oklch(64.93% 0.193 251.8)",
      "oklch(62.11% 0.1837 251.9)",
      "oklch(55.77% 0.1889 253)",
      "oklch(32.4% 0.0965 259)",
    ],
    "blueDark": [
      "oklch(19.32% 0.0258 256.8)",
      "oklch(21.3% 0.0295 258.8)",
      "oklch(27.41% 0.0669 254)",
      "oklch(31.7% 0.1002 248.3)",
      "oklch(36.49% 0.1084 249.7)",
      "oklch(41.61% 0.1125 251.7)",
      "oklch(47.48% 0.1211 252.8)",
      "oklch(54.13% 0.1396 253.2)",
      "oklch(64.93% 0.193 251.8)",
      "oklch(68.9% 0.1697 251.5)",
      "oklch(76.79% 0.1347 248.8)",
      "oklch(90.72% 0.0511 238.3)",
    ],
    "bronze": [
      "oklch(99.15% 0.001 15.92)",
      "oklch(98.06% 0.0073 42.99)",
      "oklch(95.28% 0.0102 44.26)",
      "oklch(92.52% 0.0138 43.57)",
      "oklch(89.54% 0.0178 42.64)",
      "oklch(85.99% 0.0225 43.4)",
      "oklch(81.13% 0.0295 41.94)",
      "oklch(74.18% 0.0388 41.18)",
      "oklch(62.75% 0.046 44.29)",
      "oklch(58.8% 0.0452 42.44)",
      "oklch(51.05% 0.0437 38.37)",
      "oklch(32.92% 0.0293 35.24)",
    ],
    "bronzeDark": [
      "oklch(18.06% 0.0053 41.55)",
      "oklch(21.47% 0.005 41.54)",
      "oklch(25.45% 0.0081 42.65)",
      "oklch(29.11% 0.0102 45.5)",
      "oklch(32.94% 0.0128 43.31)",
      "oklch(37.44% 0.016 44.26)",
      "oklch(42.99% 0.02 44.84)",
      "oklch(49.86% 0.0245 45.17)",
      "oklch(62.75% 0.046 44.29)",
      "oklch(66.87% 0.0453 44.29)",
      "oklch(79.18% 0.043 44.5)",
      "oklch(91.51% 0.0174 50.3)",
    ],
    "brown": [
      "oklch(99.43% 0.0015 63.24)",
      "oklch(98.32% 0.0058 65.73)",
      "oklch(95.41% 0.0128 67.82)",
      "oklch(92.61% 0.0203 66.85)",
      "oklch(89.69% 0.0286 65.79)",
      "oklch(86.24% 0.039 65.47)",
      "oklch(81.53% 0.0531 64.22)",
      "oklch(74.67% 0.0717 62.45)",
      "oklch(63.27% 0.0784 60.77)",
      "oklch(59.67% 0.0725 59.28)",
      "oklch(51.21% 0.0583 55.46)",
      "oklch(33.15% 0.018 46.98)",
    ],
    "brownDark": [
      "oklch(17.85% 0.005 81.55)",
      "oklch(21.31% 0.0075 51.62)",
      "oklch(25.36% 0.0128 53.48)",
      "oklch(28.84% 0.0182 55.42)",
      "oklch(32.47% 0.0243 55.88)",
      "oklch(37.02% 0.0317 57.69)",
      "oklch(42.9% 0.0409 59.83)",
      "oklch(50.86% 0.0535 62.17)",
      "oklch(63.27% 0.0784 60.77)",
      "oklch(67.44% 0.0749 61.48)",
      "oklch(79.82% 0.0628 62.51)",
      "oklch(91.76% 0.036 75.67)",
    ],
    "crimson": [
      "oklch(99.38% 0.0033 356.3)",
      "oklch(98.18% 0.008 357.2)",
      "oklch(95.41% 0.0261 356.3)",
      "oklch(92.52% 0.0411 356.3)",
      "oklch(89.28% 0.0537 355.8)",
      "oklch(85.5% 0.0646 355.6)",
      "oklch(80.78% 0.0784 354.8)",
      "oklch(75% 0.0988 354.1)",
      "oklch(63.43% 0.213 1.304)",
      "oklch(60.8% 0.2111 2.355)",
      "oklch(55.21% 0.2074 4.487)",
      "oklch(34.08% 0.1129 356.8)",
    ],
    "crimsonDark": [
      "oklch(18.93% 0.0143 354.2)",
      "oklch(20.68% 0.0221 352.9)",
      "oklch(25.57% 0.0595 353.9)",
      "oklch(29.31% 0.0944 354.1)",
      "oklch(33.26% 0.1044 354.7)",
      "oklch(38.18% 0.1088 355.5)",
      "oklch(45.01% 0.12 356.7)",
      "oklch(54.19% 0.1482 358.3)",
      "oklch(63.43% 0.213 1.304)",
      "oklch(66.37% 0.1967 1.951)",
      "oklch(78.74% 0.167 6.719)",
      "oklch(90.88% 0.0541 346.7)",
    ],
    "cyan": [
      "oklch(99.21% 0.0037 219.2)",
      "oklch(98.03% 0.009 202.9)",
      "oklch(95.81% 0.0265 203.6)",
      "oklch(93.19% 0.0412 204.7)",
      "oklch(89.98% 0.0538 206.5)",
      "oklch(85.93% 0.066 207.7)",
      "oklch(80.45% 0.0817 209.6)",
      "oklch(72.7% 0.1099 211.7)",
      "oklch(66.09% 0.1215 221.5)",
      "oklch(62.67% 0.1141 221.3)",
      "oklch(54.03% 0.127 223.7)",
      "oklch(33.17% 0.0528 218.6)",
    ],
    "cyanDark": [
      "oklch(19.13% 0.0172 219.9)",
      "oklch(21.41% 0.0182 225.4)",
      "oklch(27.22% 0.044 222.5)",
      "oklch(31.5% 0.0629 222.1)",
      "oklch(36.17% 0.0703 221.5)",
      "oklch(41.35% 0.0748 221.7)",
      "oklch(47.77% 0.0827 221.4)",
      "oklch(55.77% 0.0984 220.7)",
      "oklch(66.09% 0.1215 221.5)",
      "oklch(69.8% 0.1195 219.1)",
      "oklch(78.56% 0.1154 213.4)",
      "oklch(90.93% 0.0568 211.7)",
    ],
    "gold": [
      "oklch(99.37% 0.0011 106.4)",
      "oklch(98.09% 0.0086 97.34)",
      "oklch(95.34% 0.0118 94.69)",
      "oklch(92.57% 0.015 93.18)",
      "oklch(89.58% 0.0192 90.73)",
      "oklch(85.96% 0.0247 88.38)",
      "oklch(81.01% 0.0317 83.41)",
      "oklch(73.86% 0.0422 78.17)",
      "oklch(62.06% 0.0493 78.13)",
      "oklch(58.77% 0.0465 77.42)",
      "oklch(50.39% 0.0393 78.1)",
      "oklch(33.21% 0.0189 81.67)",
    ],
    "goldDark": [
      "oklch(18.22% 0.0023 106.6)",
      "oklch(21.65% 0.0061 92.49)",
      "oklch(25.49% 0.0076 88.28)",
      "oklch(29.08% 0.0095 86.76)",
      "oklch(32.89% 0.0115 83.66)",
      "oklch(37.36% 0.0138 82.43)",
      "oklch(42.94% 0.0165 80.92)",
      "oklch(49.83% 0.0204 79.5)",
      "oklch(62.06% 0.0493 78.13)",
      "oklch(66.22% 0.0473 77.18)",
      "oklch(79.4% 0.041 77.18)",
      "oklch(91.51% 0.0137 77.44)",
    ],
    "grass": [
      "oklch(99.4% 0.0053 146.4)",
      "oklch(98.2% 0.0092 145.9)",
      "oklch(96.08% 0.0231 145.3)",
      "oklch(93.42% 0.037 146.2)",
      "oklch(90.13% 0.0529 146.4)",
      "oklch(85.78% 0.0714 146.8)",
      "oklch(79.85% 0.095 147.5)",
      "oklch(71.65% 0.13 148.3)",
      "oklch(65.16% 0.1469 147.4)",
      "oklch(61.38% 0.1416 147.3)",
      "oklch(52.68% 0.1296 147.2)",
      "oklch(32.68% 0.0535 148.6)",
    ],
    "grassDark": [
      "oklch(18.83% 0.0141 155.8)",
      "oklch(21.1% 0.0141 151.5)",
      "oklch(26.71% 0.03 150.7)",
      "oklch(31.91% 0.0522 150.4)",
      "oklch(36.68% 0.0619 149.9)",
      "oklch(41.64% 0.0721 149.3)",
      "oklch(46.83% 0.0835 148.9)",
      "oklch(52.38% 0.0973 148.2)",
      "oklch(65.16% 0.1469 147.4)",
      "oklch(68.98% 0.1454 147.6)",
      "oklch(77.98% 0.142 148.5)",
      "oklch(91.1% 0.078 144.9)",
    ],
    "green": [
      "oklch(99.43% 0.0043 159.1)",
      "oklch(98.16% 0.0091 155.3)",
      "oklch(95.88% 0.0229 156.4)",
      "oklch(93.25% 0.0364 156.6)",
      "oklch(89.95% 0.0496 157.2)",
      "oklch(85.7% 0.0645 157.9)",
      "oklch(79.77% 0.0839 159)",
      "oklch(71.44% 0.1124 160.6)",
      "oklch(64.05% 0.1327 157.8)",
      "oklch(61.12% 0.1263 158.3)",
      "oklch(52.9% 0.133 158.3)",
      "oklch(32.18% 0.0474 164.6)",
    ],
    "greenDark": [
      "oklch(18.88% 0.0127 163.3)",
      "oklch(21.27% 0.016 162.2)",
      "oklch(27.14% 0.0388 162.7)",
      "oklch(31.82% 0.0573 161.5)",
      "oklch(36.48% 0.066 161.1)",
      "oklch(41.34% 0.0732 160.7)",
      "oklch(46.74% 0.0828 159.9)",
      "oklch(52.75% 0.0962 159.2)",
      "oklch(64.05% 0.1327 157.8)",
      "oklch(67.55% 0.1412 157.6)",
      "oklch(77.97% 0.1657 157.2)",
      "oklch(90.48% 0.0828 158.3)",
    ],
    "indigo": [
      "oklch(99.42% 0.0015 286.4)",
      "oklch(98.29% 0.008 271.4)",
      "oklch(96.07% 0.0172 268.5)",
      "oklch(93.53% 0.0338 268.5)",
      "oklch(90.32% 0.0511 270)",
      "oklch(86.3% 0.0714 271.5)",
      "oklch(80.68% 0.0869 271.4)",
      "oklch(73.01% 0.1133 270.5)",
      "oklch(54.36% 0.1912 267.1)",
      "oklch(51.12% 0.1946 266.5)",
      "oklch(50.97% 0.1728 267.1)",
      "oklch(31.26% 0.0856 268.6)",
    ],
    "indigoDark": [
      "oklch(19.07% 0.0247 276.7)",
      "oklch(20.88% 0.0302 276)",
      "oklch(27.22% 0.0693 267.8)",
      "oklch(31.9% 0.0932 267)",
      "oklch(36.18% 0.1045 267.5)",
      "oklch(40.37% 0.1106 268.3)",
      "oklch(45.03% 0.1202 268.8)",
      "oklch(50.27% 0.1372 268.4)",
      "oklch(54.36% 0.1912 267.1)",
      "oklch(58.99% 0.1757 269.2)",
      "oklch(77.72% 0.1233 273.3)",
      "oklch(91.1% 0.0428 270)",
    ],
    "iris": [
      "oklch(99.45% 0.0026 286.4)",
      "oklch(98.12% 0.0093 284.1)",
      "oklch(96.14% 0.0175 283.8)",
      "oklch(93.51% 0.0353 283.4)",
      "oklch(90.45% 0.0526 283.8)",
      "oklch(86.46% 0.0696 283.1)",
      "oklch(80.79% 0.0885 282.9)",
      "oklch(72.92% 0.1183 281.5)",
      "oklch(54.03% 0.1839 278.3)",
      "oklch(50.86% 0.1862 277.5)",
      "oklch(51.04% 0.1733 279.7)",
      "oklch(31.45% 0.0989 277.4)",
    ],
    "irisDark": [
      "oklch(19.28% 0.0216 284.2)",
      "oklch(20.85% 0.0292 286.5)",
      "oklch(27.28% 0.0686 278.6)",
      "oklch(31.88% 0.102 276.1)",
      "oklch(35.81% 0.1093 277.4)",
      "oklch(39.88% 0.1117 279.6)",
      "oklch(44.8% 0.1201 280.8)",
      "oklch(50.73% 0.1381 281.1)",
      "oklch(54.03% 0.1839 278.3)",
      "oklch(58.67% 0.1721 281.2)",
      "oklch(77.57% 0.1311 286.6)",
      "oklch(91.42% 0.0419 287)",
    ],
    "jade": [
      "oklch(99.45% 0.0037 172.6)",
      "oklch(98.15% 0.0089 160.3)",
      "oklch(95.96% 0.0221 161.9)",
      "oklch(93.39% 0.034 163.5)",
      "oklch(90.19% 0.0462 164.8)",
      "oklch(85.92% 0.0592 166.9)",
      "oklch(80.03% 0.0769 169.5)",
      "oklch(72.09% 0.1026 173.4)",
      "oklch(64.21% 0.115 170.8)",
      "oklch(61.34% 0.1099 170.6)",
      "oklch(52.89% 0.127 167.2)",
      "oklch(32.57% 0.041 169.8)",
    ],
    "jadeDark": [
      "oklch(18.8% 0.014 166.3)",
      "oklch(21.58% 0.018 166.1)",
      "oklch(27.24% 0.0422 166.8)",
      "oklch(31.64% 0.0575 168)",
      "oklch(36.18% 0.0643 168.5)",
      "oklch(41.08% 0.0683 169.7)",
      "oklch(46.85% 0.0753 170.6)",
      "oklch(53.69% 0.0879 171.8)",
      "oklch(64.21% 0.115 170.8)",
      "oklch(67.76% 0.1252 169.9)",
      "oklch(78.54% 0.1561 167.1)",
      "oklch(90.27% 0.0776 167)",
    ],
    "lime": [
      "oklch(99.24% 0.0042 120.7)",
      "oklch(98.17% 0.0098 116.7)",
      "oklch(95.94% 0.0433 119.1)",
      "oklch(93.21% 0.0689 120.4)",
      "oklch(89.74% 0.087 121.8)",
      "oklch(85.3% 0.0993 123.4)",
      "oklch(79.46% 0.1107 125.3)",
      "oklch(72.36% 0.1348 128.1)",
      "oklch(88.75% 0.1749 126.1)",
      "oklch(85.89% 0.1877 126.7)",
      "oklch(54.38% 0.1113 128.6)",
      "oklch(35.37% 0.0574 121.2)",
    ],
    "limeDark": [
      "oklch(18.04% 0.0144 120.3)",
      "oklch(20.8% 0.0194 129)",
      "oklch(26.62% 0.0343 132.2)",
      "oklch(31.65% 0.0469 131.8)",
      "oklch(36.34% 0.0579 131.6)",
      "oklch(41.16% 0.0686 131.4)",
      "oklch(46.44% 0.08 131.2)",
      "oklch(52.43% 0.0945 130.9)",
      "oklch(88.75% 0.1749 126.1)",
      "oklch(94.18% 0.1754 123.7)",
      "oklch(86.78% 0.1557 124.8)",
      "oklch(94.64% 0.0819 122.6)",
    ],
    "mint": [
      "oklch(99.28% 0.0053 183.7)",
      "oklch(98.2% 0.0101 178.7)",
      "oklch(95.95% 0.0299 179.6)",
      "oklch(93.3% 0.047 179)",
      "oklch(89.94% 0.0608 178.7)",
      "oklch(85.59% 0.0719 178.7)",
      "oklch(79.79% 0.0848 178.2)",
      "oklch(72.2% 0.1066 177.7)",
      "oklch(86.96% 0.0998 178)",
      "oklch(84.12% 0.0997 177.8)",
      "oklch(51.18% 0.095 176)",
      "oklch(34.97% 0.0505 181.4)",
    ],
    "mintDark": [
      "oklch(18.84% 0.0116 192.3)",
      "oklch(21.01% 0.0172 196.6)",
      "oklch(26.87% 0.039 192.5)",
      "oklch(31.35% 0.058 191.6)",
      "oklch(35.94% 0.0634 188.9)",
      "oklch(41.04% 0.0665 186.3)",
      "oklch(47.09% 0.0728 183.4)",
      "oklch(54.01% 0.085 179.6)",
      "oklch(86.96% 0.0998 178)",
      "oklch(91.62% 0.0796 179.4)",
      "oklch(79.55% 0.1184 176.4)",
      "oklch(93.05% 0.0569 168.5)",
    ],
    "orange": [
      "oklch(99.22% 0.0026 40.73)",
      "oklch(97.87% 0.0154 70.83)",
      "oklch(95.76% 0.0368 78.11)",
      "oklch(92.03% 0.0811 74.16)",
      "oklch(89.04% 0.1066 70.84)",
      "oklch(85.73% 0.11 64.43)",
      "oklch(80.53% 0.1126 59.88)",
      "oklch(74.54% 0.1321 54.82)",
      "oklch(68.9% 0.1911 44.8)",
      "oklch(66.22% 0.1944 43.49)",
      "oklch(59.19% 0.186 46.95)",
      "oklch(35.01% 0.0687 40.82)",
    ],
    "orangeDark": [
      "oklch(18.64% 0.0119 53.75)",
      "oklch(20.88% 0.0192 67.38)",
      "oklch(25.75% 0.0452 59.54)",
      "oklch(29.33% 0.0796 58.65)",
      "oklch(33.46% 0.0868 58.09)",
      "oklch(38.63% 0.0869 55.15)",
      "oklch(45.34% 0.0947 53.06)",
      "oklch(54.05% 0.1162 49.75)",
      "oklch(68.9% 0.1911 44.8)",
      "oklch(74.14% 0.1991 46.32)",
      "oklch(79.9% 0.1631 50.77)",
      "oklch(92.48% 0.0524 66.22)",
    ],
    "pink": [
      "oklch(99.41% 0.004 336.3)",
      "oklch(98.31% 0.0094 340)",
      "oklch(95.43% 0.0275 340.6)",
      "oklch(92.51% 0.0416 340.7)",
      "oklch(89.31% 0.0543 340.9)",
      "oklch(85.54% 0.0669 340.9)",
      "oklch(80.91% 0.0833 341.2)",
      "oklch(75.17% 0.1067 341.6)",
      "oklch(61.67% 0.2077 346.1)",
      "oklch(59.57% 0.2072 346.5)",
      "oklch(55.66% 0.2063 347.3)",
      "oklch(35% 0.129 345.5)",
    ],
    "pinkDark": [
      "oklch(19.07% 0.0174 334.9)",
      "oklch(20.74% 0.0313 338.2)",
      "oklch(26.14% 0.0612 337.5)",
      "oklch(29.94% 0.0975 340.1)",
      "oklch(33.8% 0.1041 340.6)",
      "oklch(38.9% 0.1072 341.6)",
      "oklch(45.87% 0.1193 342.6)",
      "oklch(54.54% 0.1449 344.1)",
      "oklch(61.67% 0.2077 346.1)",
      "oklch(65% 0.197 346.2)",
      "oklch(78.87% 0.19 350.7)",
      "oklch(90.53% 0.0586 343.2)",
    ],
    "plum": [
      "oklch(99.33% 0.0047 316.9)",
      "oklch(98.31% 0.0092 326)",
      "oklch(95.69% 0.0274 325.5)",
      "oklch(92.92% 0.0436 324.9)",
      "oklch(89.85% 0.0574 324.4)",
      "oklch(86.03% 0.0723 323.9)",
      "oklch(80.92% 0.0915 323.1)",
      "oklch(74.18% 0.12 321.9)",
      "oklch(57.89% 0.1877 322.1)",
      "oklch(55.27% 0.181 322.1)",
      "oklch(52.13% 0.1728 322)",
      "oklch(33.76% 0.1248 321.4)",
    ],
    "plumDark": [
      "oklch(19% 0.0175 327)",
      "oklch(21% 0.0311 327.7)",
      "oklch(26.57% 0.0618 326.7)",
      "oklch(30.65% 0.0883 325.3)",
      "oklch(34.34% 0.0953 324.6)",
      "oklch(38.89% 0.097 324.2)",
      "oklch(45.65% 0.1064 323.4)",
      "oklch(54.51% 0.1279 322.2)",
      "oklch(57.89% 0.1877 322.1)",
      "oklch(61.6% 0.1821 322.1)",
      "oklch(78.59% 0.1541 322.1)",
      "oklch(90.62% 0.0551 325.8)",
    ],
    "purple": [
      "oklch(99.3% 0.0038 325.4)",
      "oklch(98.23% 0.0091 313.1)",
      "oklch(95.91% 0.0243 313.3)",
      "oklch(93.28% 0.0387 312.1)",
      "oklch(90.07% 0.0539 311.6)",
      "oklch(85.96% 0.0706 311)",
      "oklch(80.4% 0.0928 309.9)",
      "oklch(73.31% 0.1227 308)",
      "oklch(55.55% 0.183 305.9)",
      "oklch(52.42% 0.1756 305.7)",
      "oklch(51.6% 0.174 305.7)",
      "oklch(32.23% 0.11 303.8)",
    ],
    "purpleDark": [
      "oklch(19.15% 0.0222 316)",
      "oklch(21.31% 0.0315 314.3)",
      "oklch(26.63% 0.0615 312)",
      "oklch(30.82% 0.0828 310.7)",
      "oklch(34.45% 0.0914 310.1)",
      "oklch(38.77% 0.0967 309.7)",
      "oklch(44.96% 0.108 308.7)",
      "oklch(54.09% 0.1328 307.1)",
      "oklch(55.55% 0.183 305.9)",
      "oklch(59.59% 0.1766 306.3)",
      "oklch(78.51% 0.1562 307.9)",
      "oklch(91.09% 0.0486 310.9)",
    ],
    "red": [
      "oklch(99.35% 0.0031 22.75)",
      "oklch(98.32% 0.0083 16.02)",
      "oklch(95.61% 0.021 16.23)",
      "oklch(92.81% 0.0473 16.68)",
      "oklch(89.61% 0.062 17.33)",
      "oklch(85.7% 0.0746 17.87)",
      "oklch(80.72% 0.0895 18.44)",
      "oklch(74.5% 0.1133 19.09)",
      "oklch(62.54% 0.1935 22.98)",
      "oklch(59.99% 0.1952 23.89)",
      "oklch(55.72% 0.1978 25.13)",
      "oklch(33.91% 0.109 16.68)",
    ],
    "redDark": [
      "oklch(18.8% 0.0133 19.39)",
      "oklch(20.48% 0.0215 14.74)",
      "oklch(25.04% 0.0643 13.11)",
      "oklch(28.88% 0.0959 14.29)",
      "oklch(33.16% 0.1066 15.53)",
      "oklch(38.26% 0.1114 16.93)",
      "oklch(45.06% 0.1206 18.91)",
      "oklch(54.36% 0.1465 21.44)",
      "oklch(62.54% 0.1935 22.98)",
      "oklch(66.46% 0.1773 23.09)",
      "oklch(78.37% 0.1619 22.29)",
      "oklch(90.22% 0.0528 6.139)",
    ],
    "ruby": [
      "oklch(99.38% 0.0033 356.3)",
      "oklch(98.34% 0.0084 8.411)",
      "oklch(95.36% 0.0222 8.563)",
      "oklch(92.8% 0.0423 8.465)",
      "oklch(89.64% 0.0548 8.165)",
      "oklch(85.81% 0.066 7.841)",
      "oklch(81.01% 0.0797 7.487)",
      "oklch(74.88% 0.1014 6.861)",
      "oklch(62.84% 0.195 13.19)",
      "oklch(60.13% 0.1962 13.39)",
      "oklch(54.89% 0.1985 13.92)",
      "oklch(34.12% 0.1097 10.04)",
    ],
    "rubyDark": [
      "oklch(18.88% 0.0137 2.904)",
      "oklch(20.77% 0.0159 5.29)",
      "oklch(25.38% 0.0602 6.544)",
      "oklch(29.21% 0.0888 5.505)",
      "oklch(33.27% 0.0997 6.398)",
      "oklch(38.2% 0.105 7.589)",
      "oklch(44.83% 0.1165 9.017)",
      "oklch(54.38% 0.1454 11.06)",
      "oklch(62.84% 0.195 13.19)",
      "oklch(66.35% 0.1794 13.69)",
      "oklch(78.61% 0.1611 17.01)",
      "oklch(90.54% 0.0527 355.8)",
    ],
    "sky": [
      "oklch(99.33% 0.0053 211.9)",
      "oklch(97.99% 0.0099 217.7)",
      "oklch(96.06% 0.0238 219.6)",
      "oklch(93.56% 0.0356 220.4)",
      "oklch(90.28% 0.0465 221.4)",
      "oklch(86.1% 0.0577 222.9)",
      "oklch(80.58% 0.0717 225.7)",
      "oklch(72.94% 0.0962 228)",
      "oklch(86.14% 0.1027 217.8)",
      "oklch(83.77% 0.1037 219.6)",
      "oklch(52.56% 0.108 232.5)",
      "oklch(35.11% 0.0572 241.6)",
    ],
    "skyDark": [
      "oklch(18.98% 0.024 257.1)",
      "oklch(21.61% 0.0289 258.5)",
      "oklch(27.11% 0.0539 251.9)",
      "oklch(32.22% 0.0696 247.8)",
      "oklch(37.25% 0.0791 245.8)",
      "oklch(42.69% 0.0874 243.6)",
      "oklch(48.8% 0.0981 240.7)",
      "oklch(55.74% 0.1143 237.2)",
      "oklch(86.14% 0.1027 217.8)",
      "oklch(90.81% 0.073 214.9)",
      "oklch(79.26% 0.0986 231.7)",
      "oklch(93.37% 0.0526 214.4)",
    ],
    "teal": [
      "oklch(99.39% 0.0047 177.5)",
      "oklch(98.12% 0.009 179)",
      "oklch(96.06% 0.027 180.3)",
      "oklch(93.46% 0.0418 180.2)",
      "oklch(90.04% 0.0541 180.5)",
      "oklch(85.58% 0.0642 181.4)",
      "oklch(79.74% 0.0763 182.2)",
      "oklch(72.11% 0.0972 183.5)",
      "oklch(64.88% 0.1134 182)",
      "oklch(61.95% 0.1096 181.2)",
      "oklch(52.96% 0.1243 179)",
      "oklch(32.69% 0.0504 185)",
    ],
    "tealDark": [
      "oklch(18.89% 0.0123 184.5)",
      "oklch(21.65% 0.0169 189.3)",
      "oklch(27.37% 0.0378 186.3)",
      "oklch(31.73% 0.0545 187)",
      "oklch(36.25% 0.06 186.5)",
      "oklch(41.37% 0.0653 185.4)",
      "oklch(47.32% 0.0739 184.5)",
      "oklch(53.89% 0.0866 183.5)",
      "oklch(64.88% 0.1134 182)",
      "oklch(68.69% 0.1227 180.3)",
      "oklch(78.88% 0.1469 175.7)",
      "oklch(90.51% 0.0721 175.3)",
    ],
    "tomato": [
      "oklch(99.35% 0.0031 22.75)",
      "oklch(98.42% 0.0071 31.02)",
      "oklch(95.44% 0.022 30.88)",
      "oklch(92.6% 0.0471 31.76)",
      "oklch(89.21% 0.0626 31.49)",
      "oklch(85.24% 0.077 32.01)",
      "oklch(80.28% 0.0943 32.17)",
      "oklch(74.15% 0.1182 32.07)",
      "oklch(62.7% 0.1937 33.31)",
      "oklch(60.4% 0.1953 33.26)",
      "oklch(56.65% 0.1977 32.81)",
      "oklch(34.61% 0.0798 30.53)",
    ],
    "tomatoDark": [
      "oklch(18.69% 0.0117 19.59)",
      "oklch(20.77% 0.0167 32.02)",
      "oklch(25.37% 0.0544 26.94)",
      "oklch(29.11% 0.087 28.17)",
      "oklch(33.14% 0.0971 28.66)",
      "oklch(38.01% 0.0994 30.01)",
      "oklch(44.74% 0.1068 31.46)",
      "oklch(53.78% 0.1301 32.94)",
      "oklch(62.7% 0.1937 33.31)",
      "oklch(66.5% 0.1791 34.15)",
      "oklch(78.43% 0.1636 36.02)",
      "oklch(89.86% 0.0466 31.11)",
    ],
    "violet": [
      "oklch(99.21% 0.0028 308)",
      "oklch(98.3% 0.009 295)",
      "oklch(96.28% 0.0189 296.6)",
      "oklch(93.4% 0.0392 295.4)",
      "oklch(90.39% 0.0569 294.1)",
      "oklch(86.41% 0.0725 293.9)",
      "oklch(80.65% 0.0902 293.5)",
      "oklch(72.91% 0.119 292.4)",
      "oklch(54.18% 0.1789 288.1)",
      "oklch(51.07% 0.177 287.6)",
      "oklch(50.8% 0.1591 288.6)",
      "oklch(31.27% 0.0975 286.8)",
    ],
    "violetDark": [
      "oklch(19.14% 0.0261 290.5)",
      "oklch(21.13% 0.0315 299.5)",
      "oklch(27.09% 0.0664 293.9)",
      "oklch(31.21% 0.0929 291.7)",
      "oklch(34.84% 0.0986 291.4)",
      "oklch(38.97% 0.1021 291.8)",
      "oklch(44.46% 0.1109 291.6)",
      "oklch(51.63% 0.1306 290.2)",
      "oklch(54.18% 0.1789 288.1)",
      "oklch(58.82% 0.1695 289.7)",
      "oklch(77.82% 0.1365 293.6)",
      "oklch(91.16% 0.0452 292.6)",
    ],
    "yellow": [
      "oklch(99.28% 0.0052 106.5)",
      "oklch(98.84% 0.025 102.9)",
      "oklch(97.4% 0.0845 104.4)",
      "oklch(95.27% 0.1166 101.7)",
      "oklch(92.51% 0.1409 98.2)",
      "oklch(88.09% 0.1339 95.42)",
      "oklch(83.55% 0.1203 92.79)",
      "oklch(76.61% 0.137 89.85)",
      "oklch(92.66% 0.2086 102.1)",
      "oklch(89.67% 0.1851 97.53)",
      "oklch(57.44% 0.1364 81.69)",
      "oklch(35.78% 0.046 86.63)",
    ],
    "yellowDark": [
      "oklch(18.11% 0.013 86.01)",
      "oklch(20.88% 0.017 92.09)",
      "oklch(25.9% 0.0466 90.29)",
      "oklch(29.26% 0.0694 94.2)",
      "oklch(33.34% 0.0791 94.59)",
      "oklch(38.43% 0.0774 93.3)",
      "oklch(45.16% 0.0809 91.5)",
      "oklch(53.49% 0.0951 89.93)",
      "oklch(92.66% 0.2086 102.1)",
      "oklch(97.11% 0.1822 109.4)",
      "oklch(90.02% 0.1664 101.6)",
      "oklch(94.13% 0.0747 101)",
    ],
  },
  "background": {
    "dark": "#111",
    "light": "#fff",
  },
  "neutralColors": {
    "gray": [
      "oklch(99.09% 0 none)",
      "oklch(98.1% 0 none)",
      "oklch(95.35% 0 none)",
      "oklch(92.96% 0 none)",
      "oklch(90.79% 0 none)",
      "oklch(88.38% 0 none)",
      "oklch(85.08% 0 none)",
      "oklch(79.1% 0 none)",
      "oklch(64.35% 0 none)",
      "oklch(60.85% 0 none)",
      "oklch(50.31% 0 none)",
      "oklch(24.3% 0 none)",
    ],
    "grayDark": [
      "oklch(17.8% 0 none)",
      "oklch(21.34% 0 none)",
      "oklch(25.37% 0 none)",
      "oklch(28.32% 0 none)",
      "oklch(31.3% 0 none)",
      "oklch(34.9% 0 none)",
      "oklch(40.23% 0 none)",
      "oklch(48.77% 0 none)",
      "oklch(53.79% 0 none)",
      "oklch(58.43% 0 none)",
      "oklch(77% 0 none)",
      "oklch(94.89% 0 none)",
    ],
    "mauve": [
      "oklch(99.18% 0.0018 321.1)",
      "oklch(98.32% 0.0033 311.2)",
      "oklch(95.56% 0.0059 314.2)",
      "oklch(93.16% 0.0078 310)",
      "oklch(90.9% 0.0101 306.6)",
      "oklch(88.6% 0.0116 304)",
      "oklch(85.36% 0.0143 300.6)",
      "oklch(79.36% 0.0193 293.5)",
      "oklch(64.58% 0.0195 292.6)",
      "oklch(61.06% 0.0185 293.1)",
      "oklch(50.48% 0.016 296.1)",
      "oklch(24.46% 0.0134 298)",
    ],
    "mauveDark": [
      "oklch(17.99% 0.0043 307.8)",
      "oklch(21.52% 0.0041 307.8)",
      "oklch(25.5% 0.0055 306.5)",
      "oklch(28.45% 0.0076 307.8)",
      "oklch(31.38% 0.009 306.9)",
      "oklch(35.01% 0.0101 304)",
      "oklch(40.16% 0.0122 304.4)",
      "oklch(49.19% 0.0159 300.7)",
      "oklch(54.05% 0.0169 294)",
      "oklch(58.62% 0.0167 295.4)",
      "oklch(76.98% 0.014 296.6)",
      "oklch(94.94% 0.0026 286.3)",
    ],
    "olive": [
      "oklch(99.31% 0.0015 149.1)",
      "oklch(98.3% 0.0033 144.8)",
      "oklch(95.61% 0.0036 141.1)",
      "oklch(93.2% 0.0042 142.1)",
      "oklch(90.95% 0.0045 139.3)",
      "oklch(88.55% 0.0056 141.1)",
      "oklch(85.17% 0.0056 141.1)",
      "oklch(79.21% 0.0071 140.6)",
      "oklch(64.04% 0.0115 136.5)",
      "oklch(60.54% 0.0116 136.5)",
      "oklch(50.01% 0.0111 139.9)",
      "oklch(24.19% 0.0112 138.2)",
    ],
    "oliveDark": [
      "oklch(17.97% 0.0043 128.3)",
      "oklch(21.17% 0.0041 128.3)",
      "oklch(25.16% 0.0051 129)",
      "oklch(28.07% 0.0056 131.4)",
      "oklch(31.01% 0.0066 131.4)",
      "oklch(34.64% 0.0076 134.4)",
      "oklch(39.86% 0.0096 136)",
      "oklch(48.77% 0.0124 140.8)",
      "oklch(53.52% 0.0176 139.6)",
      "oklch(58.12% 0.0163 140.1)",
      "oklch(76.59% 0.0128 139.5)",
      "oklch(94.7% 0.0034 144.8)",
    ],
    "sage": [
      "oklch(99.23% 0.0025 160.4)",
      "oklch(98.08% 0.0027 171.2)",
      "oklch(95.5% 0.0035 170.4)",
      "oklch(93.12% 0.0035 170.4)",
      "oklch(90.92% 0.004 167.7)",
      "oklch(88.51% 0.004 167.7)",
      "oklch(85.11% 0.0044 169.9)",
      "oklch(79.24% 0.0053 169.5)",
      "oklch(63.93% 0.0104 172.4)",
      "oklch(60.48% 0.0097 172.8)",
      "oklch(50.07% 0.0078 175.9)",
      "oklch(23.98% 0.0121 166.8)",
    ],
    "sageDark": [
      "oklch(17.92% 0.0036 167.4)",
      "oklch(21.11% 0.0037 160.2)",
      "oklch(25.12% 0.004 164.2)",
      "oklch(28.12% 0.0049 164.9)",
      "oklch(31.07% 0.0052 167.4)",
      "oklch(34.71% 0.0061 167.4)",
      "oklch(39.92% 0.0078 167.4)",
      "oklch(48.82% 0.0091 169.8)",
      "oklch(53.29% 0.0175 170.8)",
      "oklch(57.93% 0.016 170.5)",
      "oklch(76.6% 0.01 167.5)",
      "oklch(94.73% 0.0024 167.7)",
    ],
    "sand": [
      "oklch(99.37% 0.0011 106.4)",
      "oklch(98.22% 0.0015 106.4)",
      "oklch(95.55% 0.0023 97.61)",
      "oklch(93.22% 0.0034 100.6)",
      "oklch(90.99% 0.0038 95.91)",
      "oklch(88.55% 0.005 98.34)",
      "oklch(85.25% 0.0062 96.6)",
      "oklch(79.18% 0.0083 96.5)",
      "oklch(64.13% 0.0103 106.7)",
      "oklch(60.57% 0.0096 106.7)",
      "oklch(49.79% 0.0079 106.7)",
      "oklch(24.34% 0.0079 96.31)",
    ],
    "sandDark": [
      "oklch(17.76% 0.0023 106.6)",
      "oklch(21.29% 0.0022 106.6)",
      "oklch(25.31% 0.0031 106.6)",
      "oklch(28.28% 0.0036 99.02)",
      "oklch(31.24% 0.0044 100.7)",
      "oklch(34.91% 0.0057 102.2)",
      "oklch(40.07% 0.007 96.1)",
      "oklch(49.01% 0.0095 91.73)",
      "oklch(53.46% 0.011 94.07)",
      "oklch(58.11% 0.0107 94.05)",
      "oklch(76.66% 0.0091 97.38)",
      "oklch(94.83% 0.0026 106.4)",
    ],
    "slate": [
      "oklch(99.12% 0.0015 286.4)",
      "oklch(98.24% 0.003 286.3)",
      "oklch(95.57% 0.0045 281.9)",
      "oklch(93.14% 0.006 283)",
      "oklch(91.01% 0.0075 283.6)",
      "oklch(88.76% 0.0091 281.8)",
      "oklch(85.34% 0.0115 280.8)",
      "oklch(79.39% 0.0158 278.1)",
      "oklch(64.56% 0.0162 277.8)",
      "oklch(60.98% 0.0158 273.2)",
      "oklch(50.26% 0.0137 263.4)",
      "oklch(24.13% 0.0098 249.5)",
    ],
    "slateDark": [
      "oklch(17.89% 0.004 286)",
      "oklch(21.33% 0.0041 264.4)",
      "oklch(25.34% 0.0057 261.2)",
      "oklch(28.27% 0.0073 259.5)",
      "oklch(31.14% 0.0082 259.7)",
      "oklch(34.59% 0.0099 256.5)",
      "oklch(39.77% 0.012 253.8)",
      "oklch(48.99% 0.0157 247.6)",
      "oklch(53.7% 0.0152 261.1)",
      "oklch(58.3% 0.0142 263.3)",
      "oklch(76.77% 0.0104 261.3)",
      "oklch(94.88% 0.0028 264.6)",
    ],
  },
  "prefix": "ui-",
  "reset": true,
  "themes": [
    {
      "appearance": "light",
      "colors": {
        "accent": [
          "oklch(99.42% 0.0015 286.4)",
          "oklch(98.29% 0.008 271.4)",
          "oklch(96.07% 0.0172 268.5)",
          "oklch(93.53% 0.0338 268.5)",
          "oklch(90.32% 0.0511 270)",
          "oklch(86.3% 0.0714 271.5)",
          "oklch(80.68% 0.0869 271.4)",
          "oklch(73.01% 0.1133 270.5)",
          "oklch(54.36% 0.1912 267.1)",
          "oklch(51.12% 0.1946 266.5)",
          "oklch(50.97% 0.1728 267.1)",
          "oklch(31.26% 0.0856 268.6)",
        ],
        "error": [
          "oklch(99.35% 0.0031 22.75)",
          "oklch(98.32% 0.0083 16.02)",
          "oklch(95.61% 0.021 16.23)",
          "oklch(92.81% 0.0473 16.68)",
          "oklch(89.61% 0.062 17.33)",
          "oklch(85.7% 0.0746 17.87)",
          "oklch(80.72% 0.0895 18.44)",
          "oklch(74.5% 0.1133 19.09)",
          "oklch(62.54% 0.1935 22.98)",
          "oklch(59.99% 0.1952 23.89)",
          "oklch(55.72% 0.1978 25.13)",
          "oklch(33.91% 0.109 16.68)",
        ],
        "info": [
          "oklch(99.32% 0.0033 247.6)",
          "oklch(98.15% 0.0096 243.3)",
          "oklch(96% 0.0199 236.7)",
          "oklch(93.73% 0.0371 239)",
          "oklch(90.6% 0.0535 242.8)",
          "oklch(86.38% 0.0686 243.2)",
          "oklch(80.92% 0.0884 243.3)",
          "oklch(73.48% 0.1211 243)",
          "oklch(64.93% 0.193 251.8)",
          "oklch(62.11% 0.1837 251.9)",
          "oklch(55.77% 0.1889 253)",
          "oklch(32.4% 0.0965 259)",
        ],
        "neutral": [
          "oklch(99.09% 0 none)",
          "oklch(98.1% 0 none)",
          "oklch(95.35% 0 none)",
          "oklch(92.96% 0 none)",
          "oklch(90.79% 0 none)",
          "oklch(88.38% 0 none)",
          "oklch(85.08% 0 none)",
          "oklch(79.1% 0 none)",
          "oklch(64.35% 0 none)",
          "oklch(60.85% 0 none)",
          "oklch(50.31% 0 none)",
          "oklch(24.3% 0 none)",
        ],
        "success": [
          "oklch(99.43% 0.0043 159.1)",
          "oklch(98.16% 0.0091 155.3)",
          "oklch(95.88% 0.0229 156.4)",
          "oklch(93.25% 0.0364 156.6)",
          "oklch(89.95% 0.0496 157.2)",
          "oklch(85.7% 0.0645 157.9)",
          "oklch(79.77% 0.0839 159)",
          "oklch(71.44% 0.1124 160.6)",
          "oklch(64.05% 0.1327 157.8)",
          "oklch(61.12% 0.1263 158.3)",
          "oklch(52.9% 0.133 158.3)",
          "oklch(32.18% 0.0474 164.6)",
        ],
        "warning": [
          "oklch(99.22% 0.0026 40.73)",
          "oklch(97.87% 0.0154 70.83)",
          "oklch(95.76% 0.0368 78.11)",
          "oklch(92.03% 0.0811 74.16)",
          "oklch(89.04% 0.1066 70.84)",
          "oklch(85.73% 0.11 64.43)",
          "oklch(80.53% 0.1126 59.88)",
          "oklch(74.54% 0.1321 54.82)",
          "oklch(68.9% 0.1911 44.8)",
          "oklch(66.22% 0.1944 43.49)",
          "oklch(59.19% 0.186 46.95)",
          "oklch(35.01% 0.0687 40.82)",
        ],
      },
      "id": "light",
      "name": "Light",
      "radius": "0.25rem",
      "tokens": {
        "activity": {
          "background": "var(--ui-panel-bg)",
          "foreground": {
            "default": "var(--ui-fg)",
            "highlighted": "var(--ui-accent-9)",
          },
          "width": "3.5rem",
        },
        "background": {
          "default": "#fff",
          "dimmed": "var(--ui-neutral-2)",
          "elevated": "var(--ui-neutral-4)",
          "muted": "var(--ui-neutral-3)",
        },
        "border": {
          "default": "var(--ui-neutral-5)",
          "elevated": "var(--ui-neutral-6)",
        },
        "brand": {
          "background": "var(--ui-panel-bg)",
          "foreground": "var(--ui-accent-9)",
        },
        "foreground": {
          "default": "var(--ui-neutral-11)",
          "dimmed": "var(--ui-neutral-5)",
          "highlighted": "var(--ui-neutral-12)",
          "muted": "var(--ui-neutral-7)",
          "toned": "var(--ui-neutral-9)",
        },
        "header": {
          "background": "var(--ui-panel-bg)",
          "height": "3rem",
        },
        "panel": {
          "background": "white",
          "foreground": {
            "default": "var(--ui-fg)",
            "highlighted": "var(--ui-fg-highlighted)",
          },
        },
        "sidebar": {
          "background": "var(--ui-panel-bg)",
          "width": "15rem",
        },
      },
      "translucent": false,
    },
  ],
}
`;
